--- a/static/styles.css
+++ b/static/styles.css
@@ -3,4 +3,27 @@ html, body {
   margin:0;
   width:100%;
   height:100%;
+  display:flex;
+  align-items: center;
+  background-color:rgb(255, 248, 239);
+  justify-content: center;
+  font-family: "Exo 2", sans-serif;
+}
+#main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:1000px;
+  height:500px;
+  background-color: transparent;
+}
+#menu {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: rgba(195, 195, 195, 0.642);
+  backdrop-filter: blur(10px);
+  padding:10px;
 }
