--- a/static/styles.css
+++ b/static/styles.css
@@ -1,29 +1,87 @@
-html, body {
-  padding:0;
-  margin:0;
-  width:100%;
-  height:100%;
-  display:flex;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
   align-items: center;
-  background-color:rgb(255, 248, 239);
+  background-color: rgb(255, 248, 239);
   justify-content: center;
   font-family: "Exo 2", sans-serif;
+  opacity: 0.8;
+  background-image: radial-gradient(rgb(255, 228, 192) 2px, rgb(255, 253, 251) 2px);
+  background-size: 25px 25px;
 }
+
 #main-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width:1000px;
-  height:500px;
+  width: 1000px;
+  height: 500px;
   background-color: transparent;
 }
+
+button {
+  padding: 5px 10px;
+  font-size: 18px;
+  background-color: rgb(255, 240, 221);
+  color: black;
+  border-radius: 2px;
+  margin: 5px;
+  transition-duration:0.2s;
+  border: solid 1.3px black;
+}
+button:hover {
+  border-radius:5px;
+}
+
 #menu {
-  display:flex;
+  display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: rgb(255, 250, 243, 0.2);
+  backdrop-filter: blur(5px);
+  border-radius:5px;
+  padding: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
+
+#popupback {
+  position:fixed;
+  top:0;
+  left:0;
+  display:none;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  align-items: flex-start;
-  background-color: rgba(195, 195, 195, 0.642);
-  backdrop-filter: blur(10px);
+  width: 100%;
+  height: 100%;
+  outline:none;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2000;
+}
+#popup {
+  padding:15px;
+  display:flex;
   padding:10px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgb(255, 247, 237);
+  border-radius:2px;
+}
+
+input[type='text'] {
+  outline:none;
+  padding:5px;
+  font-size:18px;
+  border-radius:2px;
+  background-color: rgb(255, 252, 247);
+  border: solid 1.3px black;
+  transition-duration:0.2s;
+  margin: 5px;
 }
