--- a/static/styles.css
+++ b/static/styles.css
@@ -10,8 +10,34 @@ body {
   justify-content: center;
   font-family: "Exo 2", sans-serif;
   opacity: 0.8;
-  background-image: radial-gradient(rgb(255, 228, 192) 2px, rgb(255, 253, 251) 2px);
+  background-image: radial-gradient(rgb(255, 208, 146) 2px, rgb(255, 255, 255) 2px);
   background-size: 25px 25px;
+}
+
+#game-content {
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 1300px;
+  height: 600px;
+  background-color: rgba(189, 189, 189, 0.039);
+  border: 0.5px solid rgb(90, 90, 90);
+  backdrop-filter: blur(5px);
+  border-radius:5px;
+
+
+}
+#g-leftbar {
+  width:150px;
+  height:600px;
+  background-color: transparent;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+
 }
 
 #main-content {
@@ -31,11 +57,12 @@ button {
   color: black;
   border-radius: 2px;
   margin: 5px;
-  transition-duration:0.2s;
+  transition-duration: 0.2s;
   border: solid 1.3px black;
 }
+
 button:hover {
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 #menu {
@@ -45,43 +72,54 @@ button:hover {
   align-items: center;
   background-color: rgb(255, 250, 243, 0.2);
   backdrop-filter: blur(5px);
-  border-radius:5px;
-  padding: 20px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 25px 50px;
+  border: 0.5px solid rgb(90, 90, 90);  
 }
 
 #popupback {
-  position:fixed;
-  top:0;
-  left:0;
-  display:none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-  outline:none;
+  outline: none;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 2000;
 }
+
 #popup {
-  padding:15px;
-  display:flex;
-  padding:10px;
+  padding: 15px;
+  display: flex;
+  padding: 10px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   background-color: rgb(255, 247, 237);
-  border-radius:2px;
+  border-radius: 2px;
+}
+
+button:disabled {
+  opacity: 0.5;
+}
+
+button:disabled button:hover {
+  border-radius: 2px !important;
+
+  opacity: 0.5;
 }
 
 input[type='text'] {
-  outline:none;
-  padding:5px;
-  font-size:18px;
-  border-radius:2px;
+  outline: none;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 2px;
   background-color: rgb(255, 252, 247);
   border: solid 1.3px black;
-  transition-duration:0.2s;
+  transition-duration: 0.2s;
   margin: 5px;
 }
